hack/ocm/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: mctc-gw-istio-external-instance-per-cluster
spec:
  controllerName: "kuadrant.io/mctc-gw-controller"
